--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,3 +2,45 @@
 body{
 	font-family: "Dancing Script";
 }
+header{
+	background-color: #5b7989;
+	border-radius: 10px 0px;
+	width: 100%;
+	height: 100px;
+	position: absolute;
+	
+
+
+}
+header h1{
+	color: white;
+	text-shadow: 2px 2px #02010a;
+	margin-left:20px;
+	font-size: 1.5em;
+	float:left;
+	width: 40%;
+
+}
+header nav{
+	position: relative;
+	float: right;
+	
+}
+header ul{
+	list-style: none;
+}
+header ul li a{
+	color: white;
+	font-size: 1.5em;
+	float: left;
+
+	
+
+}
+header nav ul li a::active{
+
+	color:yellow;
+
+
+}
+
