--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,21 @@
 
 body{
 	font-family: "Dancing Script";
+	width: 100%;
+	padding: 0px;
+	margin: 0;
+	background-color: black;
 }
+#contenido{
+ 	margin: 0% 10% 0% 10%;
+ 	text-align: center;
+}
+/*HEADER*/
 header{
 	background-color: #5b7989;
 	border-radius: 10px 0px;
 	width: 100%;
 	height: 100px;
-	position: absolute;
 	
 
 
@@ -15,32 +23,56 @@ header{
 header h1{
 	color: white;
 	text-shadow: 2px 2px #02010a;
-	margin-left:20px;
-	font-size: 1.5em;
+	margin-left:5px;
+	font-size: 2.5em;
 	float:left;
-	width: 40%;
+	width: 50%;
 
 }
 header nav{
-	position: relative;
-	float: right;
+	
+	float:right;
+	
+	width: 45%;
+	padding-right:15px; 
 	
 }
 header ul{
 	list-style: none;
+	float:right;
+	
+	padding:2%;
+
+}
+header ul li {
+	color: white;
+	font-size: 1.4em;
+	float: left;
+	margin-right:15px;
+
+	padding:5px;
 }
 header ul li a{
 	color: white;
-	font-size: 1.5em;
+	font-size: 1.2em;
 	float: left;
+}
+*:lang(activo){
 
+	text-decoration: none;
+
+
+}
+
+/*SECTIONS*/
+#Principal{
+	background-color: #82c3a6;
+	text-align: center;
+	top: 0px;
 	
 
 }
-header nav ul li a::active{
-
-	color:yellow;
-
-
+#Principal img{
+	width: 80%;
+	margin: 20px;
 }
-
