--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,122 +1,89 @@
 
 body{
 	font-family: "Dancing Script";
-	width: 100%;
+	width: 100%;	
+	font-size: 14pt;
 	padding: 0px;
 	margin: 0;
-	background-color: black;
+	background-color: #02010a;
 }
 #contenido{
- 	margin: 0% 10% 0% 10%;
- 	text-align: center;
+	width: 900px;
+	margin: 0 auto;
+    min-height: 200px;
 }
 /*GENERAL*/
 img{
-	box-shadow: 2px 2px 2px #02010a;
-
+	box-shadow: 2px 2px 2px #02010a;	
+	width: 100%;
 }
-
 /*HEADER*/
 header{
+	color: white;
 	background-color: #5b7989;
 	border-radius: 10px 10px 0px 0px;
-	width: 100%;
-	height: 100px;
 	animation-name:inicio;
 	animation-duration: 1s;
+	text-shadow: 2px 2px #02010a;
+	 padding: 15px 0;
+	display: flex;
+  	display: -webkit-flex;
+  	flex-flow: row wrap;
+  	-webkit-flex-flow: row wrap;
 }
 @keyframes inicio{
     0%   {margin-top:150%;}
     60%  {margin-top:-5%;}
     100% {margin-top:0%;}
 }
-header h1{
-    color: white;
-    text-shadow: 2px 2px #02010a;
-    margin-left: 2%;
-    font-size: 2em;
-    float: left;
-    width: 48%;
-    top:50%;
-   
+#Titulo{
+  	width: 70%;
+    text-indent: 15px;
+ }
+#Menu{
+	width: 30%;
+    font-size: 18pt;
+    padding: 35px 0 0 0;
+}
+#Menu a{
+  color: #fff;
+  padding: 5px 10px;
+}
 
-}
-header nav{
-	
-	float:right;
-	
-	width: 45%;
-	padding-right:15px; 
-	
-}
-header ul{
-	list-style: none;
-	float:right;
-	
-	padding:2%;
-
-}
-header ul li {
-	color: white;
-	font-size: 1.4em;
-	float: left;
-	margin-right:15px;
-
-	padding:5px;
-}
-header ul li a{
-	color: white;
-	font-size: 1.2em;
-	float: left;
-}
 *:lang(activo){
-
 	text-decoration: none;
-
-
 }
 
 /*SECTIONS*/
 #Central{
 	background-color: #82c3a6;
-	text-align: center;
+	padding: 20px;
 	top: 0px;
-	
-
 }
 #Central img{
-	width: 80%;
-	margin: 20px;
+	width: 100%;
 }
 #Secundaria{
-	background-color: #d5c75f;
 	display: flex;
-	padding: 20px;
-	-webkit-transition: transform 55s; /* Safari */
-    transition: transform 55s;
-
-	min-height: 300px;
-
+	display: -webkit-flex;
+	flex-flow: row wrap;
+  	-webkit-flex-flow: row wrap;
+	background-color: #d5c75f;
+	padding: 20px 0;
+	min-height: 100px;
 }
 #Secundaria .Paisajes{
-	width: 40%;
-	margin: 40px;
-
-	order: 1;
-	flex-grow:1;
-	-webkit-transition: webkit-transform .4s; /* Safari */
-    transition: transform .4s;
-
+	width: 47%;
+	margin: 0 10px;
+	text-align: center;
 }
 #Secundaria .Retratos{
-	width: 40%;
-	margin: 40px;
-	flex-grow:1;
-	order: 2;
-
+	width: 47%;
+	margin: 0 10px;
+	text-align: center;
 }
 #Secundaria img{
-	width: 100%;
+	width: 80%;
 	min-height: 195px;
 	min-width: 260px;
 	-webkit-transition: webkit-transform 1s, box-shadow 1s; /* Safari */
@@ -128,13 +95,11 @@ header ul li a{
 	text-decoration: underline;
 }
 #Secundaria .Paisajes img:hover{
-
     -webkit-transform: rotate(10deg); /* Chrome, Safari, Opera */
     transform: rotate(10deg);
     box-shadow: 2px 2px 2px #82c3a6;
 }
 #Secundaria .Retratos img:hover{
-
     -webkit-transform: translate(5px,20px); /* Chrome, Safari, Opera */
     transform: translate(20px,-5px);
     box-shadow: 2px 2px 2px #82c3a6;
@@ -142,22 +107,25 @@ header ul li a{
 
 /*FOOTER*/
 footer{
+	padding: 10px;
+	
 	display: flex;
-	flex-basis: 33%;
+	display: -webkit-flex;
+	 flex-flow: row wrap;
+  	-webkit-flex-flow: row wrap;
+	
 	background-color: #C6d5c5;
-	border-radius: 0px 0px 10px 10px;
+	border-radius: 0 0 10px 10px;
 }
 footer div{
-	margin: 5px;
-	width: 30%;
-	text-align: left;
+	width: 25%;
+	box-sizing: border-box;
 }
 footer h2{
 	margin-top: 20px;
 	margin-bottom: 0px;
 	font-size: 2em;
-	font-weight:100;
-
+	font-weight: 100%;
 }
 footer div img{
 	width: 35px;
@@ -166,4 +134,55 @@ footer div img{
 }
 footer div span{
 	top:50%;
+}
+
+/*Paisajes - Retratos*/
+.colSec{
+  width: 33.33%;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 10px;
+}
+.img_1{
+  -webkit-filter:blur(10px);
+}
+.img_2{
+  -webkit-filter:grayscale(100%);
+}
+.img_3{
+  -webkit-filter:sepia(90%);
+}
+.img_4{
+  -webkit-filter:grayscale(100%);
+}
+.img_5{
+
+}
+.img_6{
+  -webkit-filter:grayscale(100%);
+}
+
+/*MEDIA QUERYS*/
+
+@media only screen and (max-width: 900px){
+	#contenido{
+			width: 100%;
+			margin: 0 auto;
+	}
+	#Menu, #Titulo{
+	    width: 100%;
+	    text-align: center;
+	}
+	#Secundaria .Retratos{
+	    width: 100%;
+	}
+	#Secundaria .Paisajes{
+		width: 100%;
+	}
+	 .colSec{
+    width: 100%;
+  }
+	footer div{
+	    width: 100%;
+	}
 }
